--- a/Intranet/Views/Home/_Lancamentos.cshtml
+++ b/Intranet/Views/Home/_Lancamentos.cshtml
@@ -70,21 +70,27 @@
     <div class="row my-5 justify-content-around align-items-center gap-3 reveal">
 
         <div class="col-md-3 text-center shadow image-hover">
-            <img src="~/Content/Produtos/000000017638.png" class="img-fluid h-75 my-3" />
+            <img src="~/Content/Produtos/000000017794.png" class="img-fluid h-75 my-3" />
             <div class="overlay">
                 <button class="btn btn-ver-mais" data-bs-toggle="modal" data-bs-target="#infoModalProduto">Ver Mais</button>
             </div>
         </div>
         <div class="col-md-3 text-center shadow image-hover">
-            <img src="~/Content/Produtos/000000017640.png" class="img-fluid h-75 my-3" />
+            <img src="~/Content/Produtos/000000017784.png" class="img-fluid h-75 my-3" />
             <div class="overlay">
                 <button class="btn btn-ver-mais" data-bs-toggle="modal" data-bs-target="#infoModalProduto2">Ver Mais</button>
             </div>
         </div>
         <div class="col-md-3 text-center shadow image-hover">
-            <img src="~/Content/Produtos/000000017639.png" class="img-fluid h-75 my-3" />
+            <img src="~/Content/Produtos/000000017785.png" class="img-fluid h-75 my-3" />
             <div class="overlay">
                 <button class="btn btn-ver-mais" data-bs-toggle="modal" data-bs-target="#infoModalProduto3">Ver Mais</button>
+            </div>
+        </div>
+        <div class="col-md-3 text-center shadow image-hover">
+            <img src="~/Content/Produtos/000000017752.png" class="img-fluid h-50 my-3" />
+            <div class="overlay">
+                <button class="btn btn-ver-mais" data-bs-toggle="modal" data-bs-target="#infoModalProduto4">Ver Mais</button>
             </div>
         </div>
     </div>
@@ -102,25 +108,27 @@
                     <div class="col-lg-10 text-center">
                         <div class="modal-body">
                             <!-- Título estilizado -->
-                            <h2 class="text-uppercase fw-bold">Lisa Hidratante <span style="color:purple;">Ameixa</span></h2>
-                            <p class="item-intro text-muted">Hidratação profunda com aroma envolvente</p>
+                            <h2 class="text-uppercase fw-bold">Lisa Clareador <span style="color:burlywood;">virilhas e axilas</span></h2>
+                            <p class="item-intro text-muted">Clareamento eficaz</p>
 
                             <!-- Imagem do produto -->
-                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017638.png" alt="Lisa Hidratante Ameixa" style="height: 233px; width: 233px;" />
+                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017794.png" alt="Lisa Hidratante Ameixa" style="height: 233px; width: 233px;" />
 
                             <!-- Texto descritivo -->
                             <p>
-                                Descubra o poder do novo hidratante de ameixa, que combina uma hidratação profunda de até 24 horas com uma textura suave e luxuosa.
-                                Este hidratante mantém sua pele com um aroma envolvente de ameixa, proporcionando uma sensação duradoura de maciez e proteção o dia todo.
+                                Também disponível na versão bisnaga 110g, o Creme Clareador Bio Soft é indicado para axilas,
+                                virilha e regiões escurecidas pelo atrito ou uso de lâmina, como cotovelos.
+                                Seu ativo principal, extraído do Gengibre Chinês possui tripla ação clareadora,
+                                atuando na formação, síntese e transporte da melanina. Com uso contínuo, inibe gradualmente a pigmentação irregular, deixando a pele mais luminosa e uniforme.
                             </p>
 
                             <!-- Assinatura -->
-                            <p class="mt-4" style="color: purple;">
+                            <p class="mt-4" style="color: burlywood;">
                                 Atenciosamente, Equipe de MKT e Desenvolvimento de Produtos SOFT HAIR e BIO SOFT.
                             </p>
 
                             <!-- Botão de fechar -->
-                            <button class="btn btn-primary btn-xl text-uppercase mt-3" data-bs-dismiss="modal" type="button">
+                            <button class="btn btn-custom btn-xl text-uppercase mt-3 text-white" style="background-color: burlywood" data-bs-dismiss="modal" type="button">
                                 <i class="fas fa-xmark me-1"></i>
                                 Fechar
                             </button>
@@ -145,25 +153,28 @@
                     <div class="col-lg-10 text-center">
                         <div class="modal-body">
                             <!-- Título com cor temática -->
-                            <h2 class="text-uppercase fw-bold">Lisa Hidratante <span style="color:green;">Melancia</span></h2>
-                            <p class="item-intro text-muted">Revitalização com frescor e maciez</p>
+                            <h2 class="text-uppercase fw-bold">Body Splash <span style="color:darkred;">Cereja</span></h2>
+                            <p class="item-intro text-muted">Cheiro de cereja leve na pele</p>
 
                             <!-- Imagem do produto -->
-                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017640.png" alt="Lisa Hidratante Melancia" style="height: 233px; width: 233px;" />
+                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017784.png" alt="Lisa Hidratante Melancia" style="height: 233px; width: 233px;" />
 
                             <!-- Texto de descrição -->
                             <p>
-                                Experimente o poder do novo hidratante melancia, que oferece intensa hidratação por até 24 horas com uma explosão de cheiro.
-                                Com textura extra cremosa, ele deixa sua pele macia, protegida e envolvida em um aroma irresistível de melancia fresca. Ideal para manter sua pele revitalizada e com sensação de frescor o dia todo.
+                                O Body Splash Pele Marcante Bio Soft é uma fragrância Floral Frutal vibrante e feminina. Suas notas de topo combinam a suculência da cereja, romã, amora,
+                                pêra e maçã, o frescor cítrico do limão e toranja, e um toque especial de pimenta rosa e yogurt. No coração, a sosticação da avelã, peônia, lírio-do-vale,
+                                gardênia, jasmim e manga traz cremosidade e elegância. A base envolvente mistura a doçura da baunilha, mel e chocolate com o aconchego do âmbar,
+                                sândalo e almíscar, criando um rastro adocicado e envolvente. Essa fragrância é perfeita para quem deseja marcar presença o dia todo!
+                                Conheça toda a Linha Lisa Esfoliantes, Hidratantes e Body Splash. Tenha uma experiência mais agradável de banho e pós banho com a linha Lisa Bio Soft.
                             </p>
 
                             <!-- Assinatura -->
-                            <p class="mt-4" style="color: green;">
+                            <p class="mt-4" style="color: darkred;">
                                 Atenciosamente, Equipe de MKT e Desenvolvimento de Produtos SOFT HAIR e BIO SOFT.
                             </p>
 
                             <!-- Botão estilizado -->
-                            <button class="btn btn-success btn-xl text-uppercase mt-3" data-bs-dismiss="modal" type="button">
+                            <button class="btn btn-custom btn-xl text-uppercase text-white mt-3" style="background-color: darkred" data-bs-dismiss="modal" type="button">
                                 <i class="fas fa-xmark me-1"></i>
                                 Fechar
                             </button>
@@ -187,25 +198,71 @@
                     <div class="col-lg-10 text-center">
                         <div class="modal-body">
                             <!-- Título -->
-                            <h2 class="text-uppercase fw-bold">Lisa Hidratante <span style="color:hotpink;">Pitaya Rosa</span></h2>
-                            <p class="item-intro text-muted">Hidratação intensa com aroma marcante</p>
+                            <h2 class="text-uppercase fw-bold">Body Splash <span style="color:tomato;">Apricot</span></h2>
+                            <p class="item-intro text-muted">Cheiro de apricot leve na pele</p>
 
                             <!-- Imagem -->
-                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017639.png" alt="Lisa Hidratante Pitaya Rosa" style="height: 233px; width: 233px;" />
+                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017785.png" alt="Lisa Hidratante Pitaya Rosa" style="height: 233px; width: 233px;" />
 
                             <!-- Descrição -->
                             <p>
-                                Revitalize sua pele com o hidratante Pitaya Rosa, que oferece 24 horas de hidratação intensa e uma textura extra cremosa que se funde perfeitamente à pele.
-                                Com um aroma único e marcante, sua pele ficará macia, protegida e com um toque sedoso durante todo o dia.
+                                O Body Splash Pele Envolvente Bio Soft é um Floral Oriental que traz em sua saída notas de Lavanda que dão um toque de leveza e tranquilidade,
+                                no coração temos um buquê floral envolvente com rosa, violeta, jasmim e lírio-do-vale, já as notas de fundo misturam a doçura da baunilha,
+                                fava tonka e o conforto do musk deixando um rastro marcante. Perfeito para quem ama fragrâncias elegantes!
+                                Dica: Conheça toda a linha Lisa Esfoliantes, Hidratantes e Body Splash. Tenha uma  experiência mais agradável de banho e pós banho com a linha Lisa Bio Soft.
                             </p>
 
                             <!-- Assinatura -->
-                            <p class="mt-4" style="color: hotpink;">
+                            <p class="mt-4" style="color: tomato;">
                                 Atenciosamente, Equipe de MKT e Desenvolvimento de Produtos SOFT HAIR e BIO SOFT.
                             </p>
 
                             <!-- Botão -->
-                            <button class="btn btn-pink btn-xl text-uppercase mt-3 text-white" data-bs-dismiss="modal" type="button" style="background-color: hotpink; border: none;">
+                            <button class="btn  btn-xl text-uppercase mt-3 text-white" data-bs-dismiss="modal" type="button" style="background-color: tomato; border: none;">
+                                <i class="fas fa-xmark me-1"></i>
+                                Fechar
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="infoModalProduto4" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content border-0 rounded-4 shadow-lg">
+            <!-- Botão de fechar customizado -->
+            <div class="position-absolute top-0 end-0 m-3" data-bs-dismiss="modal" style="cursor:pointer;">
+                <i class="fas fa-xmark me-1"></i>
+            </div>
+            <div class="container py-5">
+                <div class="row justify-content-center">
+                    <div class="col-lg-10 text-center">
+                        <div class="modal-body">
+                            <!-- Título -->
+                            <h2 class="text-uppercase fw-bold"> <span style="color:purple;">Apricot</span></h2>
+                            <p class="item-intro text-muted">Saúde para o seus fios</p>
+
+                            <!-- Imagem -->
+                            <img class="img-fluid d-block mx-auto my-4" src="~/Content/Produtos/000000017752.png" alt="Lisa Hidratante Pitaya Rosa" style="height: 233px; width: 233px;" />
+
+                            <!-- Descrição -->
+                            <p>
+                                A Máscara Reparação 3D Soft Hair foi desenvolvida para equilibrar o pH da fibra capilar e manutenção da saúde dos fios.
+                                Ideal para cabelos porosos e/ou ressecados, promove alinhamento, maciez e leveza, além de complementar o uso dos Acidificantes da linha Acidific Line Soft Hair.
+                                POTENCIALIZE OS RESULTADOS! Use com os acidificantes da linha Acidific Line (Seguindo as recomendações de uso da embalagem.
+                                A Acidificação não deve ser feita diariamente).
+                            </p>
+
+                            <!-- Assinatura -->
+                            <p class="mt-4" style="color: purple;">
+                                Atenciosamente, Equipe de MKT e Desenvolvimento de Produtos SOFT HAIR e BIO SOFT.
+                            </p>
+
+                            <!-- Botão -->
+                            <button class="btn  btn-xl text-uppercase mt-3 text-white" data-bs-dismiss="modal" type="button" style="background-color: purple; border: none;">
                                 <i class="fas fa-xmark me-1"></i>
                                 Fechar
                             </button>
