--- a/Intranet/Views/Home/_Home.cshtml
+++ b/Intranet/Views/Home/_Home.cshtml
@@ -235,21 +235,20 @@
                     </tr>
                 </thead>
                 <tbody class="bg-white">
-                    <tr><td>Izabela Amora</td><td>03/05</td><td>Administrativo</td></tr>
-                    <tr><td>Maicon Douglas</td><td>03/05</td><td>Elza Matriz/Produção</td></tr>
-                    <tr><td>Leandra Aparecida</td><td>08/05</td><td>Elza Matriz/Produção</td></tr>
-                    <tr><td>Barbara Silva</td><td>09/05</td><td>Vitrine/CD Contagem</td></tr>
-                    <tr><td>Crimacia Claudia</td><td>15/05</td><td>Administrativo</td></tr>
-                    <tr><td>Debora Cristina</td><td>16/05</td><td>Elza Matriz/Produção</td></tr>
-                    <tr><td>Josiane Carvalho</td><td>20/05</td><td>Elza Matriz/Produção</td></tr>
-                    <tr><td>Adila Barbosa</td><td>21/05</td><td>Administrativo</td></tr>
-                    <tr><td>Danielle Stefania</td><td>23/05</td><td>Administrativo</td></tr>
-                    <tr><td>João Victor Bicalho</td><td>24/05</td><td>Administrativo</td></tr>
-                    <tr><td>Pamela Ferreira</td><td>24/05</td><td>Elza/CD</td></tr>
-                    <tr><td>Michelle de Castro</td><td>26/05</td><td>Elza Matriz/Produção</td></tr>
-                    <tr><td>Matheus Ferreira</td><td>27/05</td><td>Elza Matriz/Produção</td></tr>
-                    <tr><td>Wagner da Pureza</td><td>27/05</td><td>Elza/CD</td></tr>
-                    <tr><td>Dayse Mara</td><td>29/05</td><td>Administrativo</td></tr>
+                    <tr><td>Berenice Longuinhos</td><td>03/06</td><td>Administrativo</td></tr>
+                    <tr><td>Franciele Martins</td><td>06/06</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Crislaine Batista</td><td>06/06</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Lucinea Mota</td><td>14/06</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Rafael Rocha</td><td>16/06</td><td>Administrativo</td></tr>
+                    <tr><td>Wanessa Cristina</td><td>17/06</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Valéria Duque</td><td>18/06</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Lorrayne Almeida</td><td>18/06</td><td>Administrativo</td></tr>
+                    <tr><td>Angelica Mariana</td><td>21/06</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Guilherme Anisio</td><td>23/06</td><td>Elza Matriz/CD</td></tr>
+                    <tr><td>Talita Sousa</td><td>23/06</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>João Paulo Gonçalves</td><td>25/06</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Antonio Sérgio</td><td>29/06</td><td>Elza Matriz/Produção</td></tr>
+
                 </tbody>
             </table>
         </div>
