--- a/Intranet/Views/Home/_About.cshtml
+++ b/Intranet/Views/Home/_About.cshtml
@@ -141,96 +141,96 @@
                 <div><i class="fa-solid fa-check" style="color: purple"></i> <strong style="color: purple">Ginástica Laboral:</strong> Das 08:30–08:40 (pausa obrigatória às 08:25).</div>
             </div>
             <hr class="mx-2" style="width: 75%; height: 3px; background-color: black; border: none;" />
-        </div>
 
-        <div class="row justify-content-center pb-5">
+            <div class="my-3">
+                <h3><strong>Escala do Almoço</strong></h3>
+                <span>Aqui se encontram os horários de almoço dos funcionários do escritório.</span>
+            </div>
             <div class="col-10">
-                <div class="my-3">
-                    <h3><strong>Escala do Almoço</strong></h3>
-                    <span>Aqui se encontram os horários de almoço dos funcionários do escritório.</span>
+                <div class="table-responsive">
+                    <table class="table-bordered w-100 text-center" cellpadding="8" cellspacing="0">
+                        <thead style="background-color: #CCA9DD;">
+                            <tr>
+                                <th colspan="5">COZINHA</th>
+                                <th colspan="5">REFEITÓRIO 1º PISO</th>
+                            </tr>
+                            <tr>
+                                <th>11h30min</th>
+                                <th>12h00min</th>
+                                <th>12h30min</th>
+                                <th>13h00min</th>
+                                <th>13h30min</th>
+                                <th>12h00</th>
+                                <th>12h30</th>
+                                <th>13h00min</th>
+                                <th>13h15min</th>
+                                <th>13h30min</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Gerald</td>
+                                <td>Berenice</td>
+                                <td>Camila</td>
+                                <td>Fagner</td>
+                                <td>Tati</td>
+                                <td>Karoline (Jurídico)</td>
+                                <td>Victor</td>
+                                <td>Jade</td>
+                                <td>Luiz (TI)</td>
+                                <td>Natã</td>
+                            </tr>
+                            <tr>
+                                <td>Felipe</td>
+                                <td>Tininha</td>
+                                <td>Andreza</td>
+                                <td>Deivid</td>
+                                <td>Jaqueline</td>
+                                <td></td>
+                                <td>João</td>
+                                <td>Thiago (CT)</td>
+                                <td>Maria Laura</td>
+                                <td>Paula</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Crimacia</td>
+                                <td>Luana</td>
+                                <td>Pedro</td>
+                                <td>Dani</td>
+                                <td></td>
+                                <td>Aline</td>
+                                <td>Luiz (MKT)</td>
+                                <td>Dayse Mara</td>
+                                <td>Alana</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Karolina (E-commerce)</td>
+                                <td>Adila</td>
+                                <td>Caio</td>
+                                <td>Lorrayne</td>
+                                <td></td>
+                                <td>Camila (MKT)</td>
+                                <td>Mariana</td>
+                                <td></td>
+                                <td>Miguel</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Nancy</td>
+                                <td>Duda (CT)</td>
+                                <td>Diego</td>
+                                <td>Dayse Xavier</td>
+                                <td></td>
+                                <td>Livia</td>
+                                <td>Izabela (Fiscal)</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <table class="table-bordered w-100 text-center" cellpadding="8" cellspacing="0">
-                    <thead style="background-color: #CCA9DD;">
-                        <tr>
-                            <th colspan="5">COZINHA</th>
-                            <th colspan="5">REFEITÓRIO 1º PISO</th>
-                        </tr>
-                        <tr>
-                            <th>11h30min</th>
-                            <th>12h00min</th>
-                            <th>12h30min</th>
-                            <th>13h00min</th>
-                            <th>13h30min</th>
-                            <th>12h00</th>
-                            <th>12h30</th>
-                            <th>13h00min</th>
-                            <th>13h15min</th>
-                            <th>13h30min</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Gerald</td>
-                            <td>Berenice</td>
-                            <td>Camila</td>
-                            <td>Fagner</td>
-                            <td>Tati</td>
-                            <td>Karoline (Jurídico)</td>
-                            <td>Victor</td>
-                            <td>Jade</td>
-                            <td>Luiz (TI)</td>
-                            <td>Natã</td>
-                        </tr>
-                        <tr>
-                            <td>Felipe</td>
-                            <td>Tininha</td>
-                            <td>Andreza</td>
-                            <td>Deivid</td>
-                            <td>Jaqueline</td>
-                            <td></td>
-                            <td>João</td>
-                            <td>Thiago (CT)</td>
-                            <td>Maria Laura</td>
-                            <td>Paula</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Crimacia</td>
-                            <td>Luana</td>
-                            <td>Pedro</td>
-                            <td>Dani</td>
-                            <td></td>
-                            <td>Aline</td>
-                            <td>Luiz (MKT)</td>
-                            <td>Dayse Mara</td>
-                            <td>Alana</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Karolina (E-commerce)</td>
-                            <td>Adila</td>
-                            <td>Caio</td>
-                            <td>Lorrayne</td>
-                            <td></td>
-                            <td>Camila (MKT)</td>
-                            <td>Mariana</td>
-                            <td></td>
-                            <td>Miguel</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>Nancy</td>
-                            <td>Duda (CT)</td>
-                            <td>Diego</td>
-                            <td>Dayse Xavier</td>
-                            <td></td>
-                            <td>Livia</td>
-                            <td>Izabela (Fiscal)</td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table>
             </div>
         </div>
     </div>
